--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -26,7 +26,7 @@ jobs:
           go-version: ^1.14
         id: go
 
-      - name: Check out code into the Go module directory
+      - name: Check out code into the Go module directory1
         uses: actions/checkout@v2
 
       - name: Update-gist
